Minor web help updates

--- a/response-tweaker/web-about/style.css
+++ b/response-tweaker/web-about/style.css
@@ -21,6 +21,14 @@ img {
   margin: 5px;
 }
 
+.deeper-button {
+  height: 50px;
+}
+
+a {
+  font-size: 20px;
+}
+
 .example-box {
   padding: 6px;
   background-color: #FFFFA5;
