--- a/response-tweaker/response-tweaker/JObjectViewer.xaml
+++ b/response-tweaker/response-tweaker/JObjectViewer.xaml
@@ -8,7 +8,7 @@
              d:DesignHeight="300"
              d:DesignWidth="400">
     <UserControl.Resources>
-        <local:BoolToVisibilityConverter x:Key="BoolToVisibility"/>
+        <local:BoolToVisibilityConverter x:Key="BoolToVisibility" />
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -18,10 +18,10 @@
         <StackPanel Orientation="Horizontal"
                     Grid.Row="0">
             <Button x:Name="BackButton"
-                Click="BackButton_OnClick"
-                Background="#EEEEEE"
-                Visibility="{x:Bind ViewModel.BackEnabled, Mode=OneWay, Converter={StaticResource BoolToVisibility}}"
-                Content="⬅" />
+                    Click="BackButton_OnClick"
+                    Background="#EEEEEE"
+                    Visibility="{x:Bind ViewModel.BackEnabled, Mode=OneWay, Converter={StaticResource BoolToVisibility}}"
+                    Content="⬅" />
         </StackPanel>
         <ListView x:Name="ObjectLevelViewer"
                   Grid.Row="1"
@@ -30,71 +30,104 @@
                   ItemClick="ObjectLevelViewer_OnItemClick">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="HorizontalContentAlignment"
+                            Value="Stretch" />
                 </Style>
             </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="local:JObjectRow">
-                    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                    <Grid HorizontalAlignment="Stretch"
+                          VerticalAlignment="Stretch">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
                             <ColumnDefinition Width="30" />
                         </Grid.ColumnDefinitions>
-                        <StackPanel Orientation="Horizontal" Grid.Column="0">
+                        <StackPanel Orientation="Horizontal"
+                                    Grid.Column="0">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="Auto" />
                                     <RowDefinition Height="Auto" />
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0"
-                                        Orientation="Horizontal">
+                                            Orientation="Horizontal">
                                     <TextBlock Text="{x:Bind KeyLabel}"
-                                           Foreground="#EEEEEE"
-                                           FontWeight="Bold" />
+                                               Foreground="#EEEEEE"
+                                               FontWeight="Bold" />
                                     <TextBlock Text=":"
-                                           Foreground="#EEEEEE"
-                                           Margin="0,0,10,0" />
+                                               Foreground="#EEEEEE"
+                                               Margin="0,0,10,0" />
                                 </StackPanel>
                                 <StackPanel Grid.Row="1"
-                                        Orientation="Horizontal">
+                                            Orientation="Horizontal">
                                     <Button IsEnabled="{x:Bind ExpandAllowed, Mode=OneWay}"
-                                        Content="{x:Bind ExpandButtonLabel, Mode=OneWay}"
-                                        Width="31"
-                                        Height="31"
-                                        Background="#EEEEEE"
-                                        Margin="0,0,5,0"
-                                        Click="{x:Bind ExpandRequested}" />
+                                            Content="{x:Bind ExpandButtonLabel, Mode=OneWay}"
+                                            Width="31"
+                                            Height="31"
+                                            Background="#EEEEEE"
+                                            Margin="0,0,5,0"
+                                            Click="{x:Bind ExpandRequested}" />
                                     <Button Background="#EEEEEE"
-                                        IsEnabled="{x:Bind EditAllowed}"
-                                        Content="{x:Bind EditButtonLabel, Mode=OneWay}"
-                                        Click="{x:Bind EditRequested}" />
+                                            IsEnabled="{x:Bind EditAllowed}"
+                                            Content="{x:Bind EditButtonLabel, Mode=OneWay}"
+                                            Click="{x:Bind EditRequested}" />
                                 </StackPanel>
                             </Grid>
                             <TextBlock x:Name="ValueTextBlock"
-                                   Text="{x:Bind ValueLabel, Mode=OneWay}"
-                                   MaxLines="{x:Bind MaxLinesForValueLabel, Mode=OneWay}"
-                                   Margin="10,0,0,0"
-                                   TextWrapping="NoWrap"
-                                   Foreground="#EEEEEE"
-                                   TextTrimming="CharacterEllipsis"
-                                   Visibility="{x:Bind ValueVisibility, Mode=OneWay}" />
-                            <TextBox Text="{x:Bind ValueLabel, Mode=TwoWay}"
-                                 Margin="10,0,0,0"
-                                 Visibility="{x:Bind EditVisibility, Mode=OneWay}"
-                                 KeyUp="{x:Bind InputBoxKeyUp}"/>
+                                       Text="{x:Bind ValueLabel, Mode=OneWay}"
+                                       MaxLines="{x:Bind MaxLinesForValueLabel, Mode=OneWay}"
+                                       Margin="10,0,0,0"
+                                       TextWrapping="NoWrap"
+                                       Foreground="#EEEEEE"
+                                       TextTrimming="CharacterEllipsis"
+                                       Visibility="{x:Bind ValueVisibility, Mode=OneWay}" />
+                            <StackPanel Orientation="Horizontal"
+                                        Visibility="{x:Bind EditVisibility, Mode=OneWay}">
+                                <TextBox Text="{x:Bind ValueLabel, Mode=TwoWay}"
+                                         Margin="10,0,10,0"
+                                         Foreground="#EEEEEE"
+                                         KeyUp="{x:Bind InputBoxKeyUp}" />
+                                <Button x:Name="ContentTrue"
+                                        Margin="5,0,0,0"
+                                        Foreground="#EEEEEE"
+                                        Click="{x:Bind ContentSetToTrue}"
+                                        Content="True" />
+                                <Button x:Name="ContentFalse"
+                                        Margin="5,0,0,0"
+                                        Foreground="#EEEEEE"
+                                        Click="{x:Bind ContentSetToFalse}"
+                                        Content="False" />
+                                <Button x:Name="ContentNull"
+                                        Margin="5,0,0,0"
+                                        Foreground="#EEEEEE"
+                                        Click="{x:Bind ContentSetToNull}"
+                                        Content="Null" />
+                                <Button x:Name="ContentArray"
+                                        Margin="5,0,0,0"
+                                        Foreground="#EEEEEE"
+                                        IsEnabled="False"
+                                        Click="{x:Bind ContentSetToEmptyArray}"
+                                        Content="[]" />
+                                <Button x:Name="ContentObject"
+                                        Margin="5,0,0,0"
+                                        Foreground="#EEEEEE"
+                                        IsEnabled="False"
+                                        Click="{x:Bind ContentSetToEmptyObject}"
+                                        Content=" {}" />
+                            </StackPanel>
                         </StackPanel>
-                        <Border Grid.Column="1" 
+                        <Border Grid.Column="1"
                                 Background="#EEEEEE"
                                 BorderBrush="#444444"
                                 BorderThickness="1"
                                 Padding="1"
                                 Margin="0,2,0,0"
                                 Visibility="{x:Bind ClickEnabled, Mode=OneWay, Converter={StaticResource BoolToVisibility}}">
-                            <TextBlock x:Name="CanSeeMore" 
-                                   Text=">" 
-                                   Foreground="Black"  
-                                   HorizontalAlignment="Center"
-                                   VerticalAlignment="Center" />
+                            <TextBlock x:Name="CanSeeMore"
+                                       Text=">"
+                                       Foreground="Black"
+                                       HorizontalAlignment="Center"
+                                       VerticalAlignment="Center" />
                         </Border>
                     </Grid>
                 </DataTemplate>
